Fix obvious text clipping issues with other languages

--- a/styles/pages/main-menu.scss
+++ b/styles/pages/main-menu.scss
@@ -499,7 +499,6 @@ $drawer-width: 768px;
 
 	&__header {
 		width: 100%;
-		height: 31px;
 		background-color: rgba(0, 0, 0, 0.4);
 		border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 		padding: 2px 4px 1px 8px;
